# Learned_Index_Papers

./: .gitignore  DEPLOY.md  README.md
.github/workflows/: deploy.yml  keep-render-awake.yml
backend/: Dockerfile  collect_papers.py  filter_data.py  get_author_info.py  get_pdf.py  get_pdf_text.py  get_tag.py  get_tldr.py  get_tldr_ja.py  nohup.out  openalex_utils.py  process_data.py  pyproject.toml  requirements.txt  semantic_scholar_utils.py
backend/data/author_info/: A. Afzali-Kusha.json  A. Agarwal.json  A. Bhattacharya.json  A. Buluç.json  A. Choudhary.json  A. Dragojevic.json  A. Fan.json  A. Fuchs.json  A. Halevy.json  A. Heuer.json  A. Kemper.json  A. Khokhar.json  A. Krishnamurthy.json  A. Kuhnle.json  A. Magdy.json  A. Mosca.json  A. Mueller.json  A. Ng.json  A. Nica.json  A. Panconesi.json  A. Philippakis.json  A. Reuther.json  A. Ross.json  A. S. Agbemenu.json  A. Silva.json  A. Tagami.json  A. Trotman.json  A. Vakilian.json  Aadil Shaikh.json  Aarati Kakaraparthy.json  Aaron J. Elmore.json  Abdelouahab Chibah.json  Abdul Wasay.json  Abhinandan Patni.json  Abhinav Sharma.json  Abhishek Roy.json  Abrar Fahim.json  Adarsh Kumar.json  Adeel Aslam.json  Aditya Akella.json  (+1471 more)
backend/data/citations/: None.json
backend/data/papers/: .gitkeep
data/author_info/: A. Ailamaki.json  A. Alam.json  A. Anjum.json  A. Antoniadis.json  A. Aydin.json  A. B. M. Shawkat Ali.json  A. Bagchi.json  A. Beer.json  A. Biswas.json  (+1470 more)
docs/: asset-manifest.json  index.html
frontend/: .env.production  .eslintrc.json  package-lock.json  package.json
processed_data/: .gitkeep
(+27 files in other folders)
