[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "arxiv>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.104.0",
    "lxml>=4.9.0",
    "networkx>=3.1",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pypdf2>=3.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.67.1",
    "unicorn>=2.1.4",
    "uvicorn[standard]>=0.24.0",
]
